[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/StartScreen.tres" type="Theme" id=1]
[ext_resource path="res://Entities/Interface/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Graphics/GUI/panel.png" type="Texture" id=3]

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GUITemplate" type="NinePatchRect" parent="HBoxContainer"]
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )

[node name="MenuIni" type="CenterContainer" parent="HBoxContainer/GUITemplate"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubMenuIni" type="VBoxContainer" parent="HBoxContainer/GUITemplate/MenuIni"]
margin_left = 305.0
margin_top = 265.0
margin_right = 494.0
margin_bottom = 335.0

[node name="NewGames" type="Button" parent="HBoxContainer/GUITemplate/MenuIni/SubMenuIni"]
margin_right = 189.0
margin_bottom = 33.0
text = "New Game"

[node name="FindGames" type="Button" parent="HBoxContainer/GUITemplate/MenuIni/SubMenuIni"]
margin_top = 37.0
margin_right = 189.0
margin_bottom = 70.0
size_flags_horizontal = 6
text = "Find Games"

[node name="MenuGames" type="HBoxContainer" parent="HBoxContainer/GUITemplate"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GamesCentered" type="CenterContainer" parent="HBoxContainer/GUITemplate/MenuGames"]
margin_right = 398.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Games" type="VBoxContainer" parent="HBoxContainer/GUITemplate/MenuGames/GamesCentered"]
margin_left = 199.0
margin_top = 300.0
margin_right = 199.0
margin_bottom = 300.0

[node name="Lobby" type="NinePatchRect" parent="HBoxContainer/GUITemplate/MenuGames"]
margin_left = 402.0
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayersOnLobby" type="Label" parent="HBoxContainer/GUITemplate/MenuGames/Lobby"]
margin_right = 40.0
margin_bottom = 27.0

[connection signal="pressed" from="HBoxContainer/GUITemplate/MenuIni/SubMenuIni/NewGames" to="." method="_on_NewGames_pressed"]
[connection signal="pressed" from="HBoxContainer/GUITemplate/MenuIni/SubMenuIni/FindGames" to="." method="_on_FindGames_pressed"]
